@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-00
+2013-02-12 Andy Salnikov
+- Dataset can also accept file name in a constructor
+- Dataset class have files() method returning a list of files
+
 Tag: V00-00-01
 2012-07-10 Andy Salnikov
 - first import into repository
